# Qwen3-TTS-FineTuned-API

./: .env.example  .gitignore  API_DOCS.md  Colab_Tester.ipynb  Dockerfile.tir  Qwen3-TTS_Postman_Collection.json  README.md  api_server.py  download_models.py  gen_excited_sample.py  inference_manager.py  ops_logger.py  pipeline.py  prepare_data.bat  prepare_data.sh  pyproject-linux.toml  pyproject.toml  setup_tir.sh  start_api.bat  start_api.sh  start_tir.sh  storage.py  test_api.py  test_api_s3_dataset.py  test_finetune.py  test_parallel_batching.py  test_voice_clone_batch.py  test_voice_design.py  test_wait_and_infer.py  train.sh  train17.bat  train6.bat  verify_inference_direct.py  verify_production_flow.py
finetuning/: dataset.py  prepare_data.py  sft_12hz.py
qwen_tts/core/tokenizer_25hz/vq/: speech_vq.py
research/: qwen_finetuning_guide.md
