[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen-tts"
version = "0.0.4"
description = "Qwen-TTS python package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
license = { text = "Apache-2.0" }
authors = [{ name = "Alibaba Qwen Team" }]

dependencies = [
  "numpy<2.0.0",
  "transformers==4.57.3",
  "accelerate==1.12.0",
  "gradio",
  "librosa",
  "soundfile",
  "sox",
  "onnxruntime",
  "einops",
  "tensorboard>=2.20.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.34.0",
  "python-multipart>=0.0.18",
  "requests",
  "boto3",
]

[project.urls]
Homepage = "https://github.com/Qwen/Qwen3-TTS"
Repository = "https://github.com/Qwen/Qwen3-TTS"

[project.scripts]
qwen-tts-demo = "qwen_tts.cli.demo:main"

[tool.setuptools]
packages = { find = { where = ["."] , include = ["qwen_tts*"] } }
include-package-data = true

[tool.setuptools.package-data]
qwen_tts = ["py.typed", "**/*.npz"]

[project.optional-dependencies]
cu121 = [
  "torch==2.2.1",
  "torchvision>=0.17.1",
  "torchaudio>=2.2.1",
]

flash = [
  "flash-attn>=2.5.0"
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", extra = "cu121" },
]
torchvision = [
  { index = "pytorch-cu121", extra = "cu121" },
]
torchaudio = [
  { index = "pytorch-cu121", extra = "cu121" },
]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
